[package]
name = "graphql_cache"
version = "0.1.0"
authors = ["Dino Costantini <dino.costantini@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0"
tokio = { version = "0", features = ["macros"] }
bytes = "0"