[package]
name = "graphql_cache"
version = "0.1.0"
authors = ["Dino Costantini <dino.costantini@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time"] }
bytes = "0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = { version = "*", features = ["preserve_order"] }
chrono = "0"
rand = "0"
hyper = "0"
itertools = "0"
reqwest = { version = "0", features = ["json", "rustls-tls"], default-features = false }
redis = { version = "*", features = ["tokio-comp"] }
futures = { version = "*" }
jsonwebtoken = "*"

[features]
slow_tests = [] # This is only used to run slow tests. No effects on release code